--- a/app/index.html
+++ b/app/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html class="fillHeight">
     <head></head>
-    <body>
+    <body class="fillHeight">
         <link rel="stylesheet" href="main.css" />
         <script src="elm.js"></script>
         <script>
