Drop the leading '#' from the location fragment

--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,7 @@
         <script src="elm.js"></script>
         <script>
         var app = Elm.Main.fullscreen({
-            locationFragment: window.location.hash
+            locationFragment: window.location.hash.substring(1)
         });
         </script>
     </body>
